<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView01"
        android:layout_width="match_parent"
        android:layout_height="309dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:src="@drawable/download3"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/open_camera"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btnGetLocation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/get_location"
        tools:ignore="HardcodedText" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >
     <TextView
         android:id="@+id/tvLatitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:layout_marginLeft="2dp"
         android:textSize="18sp"
         tools:text="latitude:24.567890"
         android:layout_marginStart="2dp" />
        <TextView
            android:id="@+id/tvLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginLeft="3dp"
            android:textSize="18sp"
            tools:text="longitude:64.567890"
            android:layout_marginStart="3dp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:text="@string/address"
        android:gravity="center_horizontal"
        tools:ignore="HardcodedText" />
    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:indeterminateTint="@color/design_default_color_primary_dark"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        tools:ignore="UnusedAttribute" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:scrollbarSize="@dimen/cardview_compat_inset_shadow"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Button03"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/view_photos"
            android:layout_marginEnd="5dp"
            tools:ignore="HardcodedText" />
        <Button
            android:id="@+id/Button04"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/take_attendance"
            android:layout_marginStart="5dp"
            tools:ignore="HardcodedText" />


    </LinearLayout>

</LinearLayout>